--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <form method="Post" action= "/checkout">
-Item's Name:<input type="text" id="item">
+Item's Name:<input type="text" id="item" name="item">
+
 </form>
