Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,9 @@
-<form method="Post" action= "/checkout">
-Item's Name:<input type="text" id="item" name="item">
-
-</form>
+<!DOCTYPE html>
+<html>
+  <body>
+    <form action="/checkout" method="POST">
+      Name of item: <input type="text" id="item" name="item">
+      <input id="submit" type="submit" value="sumbit">
+    </form>
+  </body>
+</html>
